<resources>
    <string name="app_name">PickerView</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="picker_text_parse">解析数据</string>
    <string name="picker_text_show">显示省市区选择器</string>

    <string name="picker_custom_lunar">公农历切换</string>
    <string name="picker_time">时间选择器</string>
    <string name="picker_province">条件选择器</string>

    <string name="picker_custom_time">时间选择器自定义布局(无3D效果)</string>
    <string name="picker_custom_time2">时间选择器自定义布局(无3D效果)-时分</string>
    <string name="picker_custom_province">条件选择器自定义布局</string>
    <string name="picker_custom_parent">自定义父容器</string>
    <string name="picker_use_circle_divider">使用圆形分割线</string>

    <string name="picker_non_linkage">条件选择器(不联动)</string>

    <string name="picker_json_parse_sample">省市区Json文件解析示例</string>

</resources>