<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_Time"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimaryLight"
                android:text="@string/picker_time"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_CustomTime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:background="@color/colorPrimaryLight"
                android:text="@string/picker_custom_time"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_lunar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/picker_custom_lunar" />

            <Button
                android:id="@+id/btn_Options"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_province" />

            <Button
                android:id="@+id/btn_CustomOptions"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_custom_province" />

            <Button
                android:id="@+id/btn_no_linkage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_non_linkage" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryLight" />

            <Button
                android:id="@+id/btn_GotoJsonData"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_json_parse_sample" />

            <Button
                android:id="@+id/btn_fragment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_custom_parent" />

            <Button
                android:id="@+id/btn_circle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/picker_use_circle_divider" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
